--- a/project.yml
+++ b/project.yml
@@ -10,3 +10,4 @@ sourceSystems:
     name: 'Blackforest Markets Parquet'
     isLinkedProject: true
     sourceSystemTypeId: '301305db-47c8-4d20-b2b2-5dbefbaf251d'
+propertyValues: []
